# bhop

./: .gitignore  CLAUDE.md  initialprompt.md  pyproject.toml
docs/: environment_design.md  issues.md  pixel_obs_plan.md  quake3_physics.md
notebooks/: analysis.ipynb
scripts/: evaluate.py  sweep.py  train.py
src/bhop/: __init__.py  env.py  geometry.py  physics.py  viz.py
tests/: test_env.py  test_geometry.py  test_physics.py
