[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bhop"
version = "0.1.0"
description = "RL discovery of bunnyhopping via Quake III Arena movement physics"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
    "numpy>=1.24",
    "tensorboard>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
notebook = [
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
